--- a/Anchor.toml
+++ b/Anchor.toml
@@ -11,7 +11,7 @@ solana_crowdfunding = "GAiTsjthEZq2r35wZ7nV7SsjdJbEwEDEwHx1x9ug8WjG"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
